--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h1>MonteSmart Online School</h1>
     <p>Phone: 000-000-0000</p>
     <p>We offer courses in Computer Science, AI, and Technology.</p>
+    <img src="F7266D3D-B625-4611-B647-B9F39760F47F.jpeg" alt="MonteSmart School Logo">
   </body>
 </html>
+
