--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>MonteSmart Online School</title>
     <style>
       body {
-        background-color: #87CEFA; /* สีฟ้าอ่อน */
-        text-align: center; /* จัดเนื้อหาตรงกลาง */
+        background-color: #87CEFA;
+        text-align: center;
+        font-family: Arial, sans-serif; /* เปลี่ยนฟอนต์เป็น Arial และ fallback เป็น sans-serif */
       }
     </style>
   </head>
@@ -16,4 +17,3 @@
     <img src="F7266D3D-B625-4611-B647-B9F39760F47F.jpeg" alt="MonteSmart School Logo">
   </body>
 </html>
-
